[gd_scene load_steps=6 format=3 uid="uid://dwq3noa4cb1it"]

[ext_resource type="Script" uid="uid://bvacn03g2g23q" path="res://SCRIPTS/Pagina.gd" id="1_0g3ly"]
[ext_resource type="Texture2D" uid="uid://ig8kg640ndej" path="res://IMAGENS/Páginas/capa.png" id="2_7d7lp"]
[ext_resource type="Texture2D" uid="uid://bpsgi7ekpmh3" path="res://IMAGENS/Botões/ligar_som.png" id="3_0g3ly"]
[ext_resource type="Texture2D" uid="uid://dvkdxoe36ju13" path="res://IMAGENS/Botões/desligar_som.png" id="4_7d7lp"]
[ext_resource type="AudioStream" uid="uid://wmtm7awyn0l2" path="res://ÁUDIOS/capa.wav" id="5_7d7lp"]

[node name="CAPA" type="Node2D"]
position = Vector2(384, 512)
script = ExtResource("1_0g3ly")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7d7lp")

[node name="BotaoProxima" type="TextureButton" parent="."]
offset_left = 130.0
offset_top = 397.0
offset_right = 355.0
offset_bottom = 454.0

[node name="BotaoSom" type="TextureButton" parent="."]
offset_left = -356.0
offset_top = 402.0
offset_right = -134.0
offset_bottom = 449.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_0g3ly")
texture_pressed = ExtResource("4_7d7lp")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7d7lp")
autoplay = true
